--- a/YouTubeApiProject/appsettings.json
+++ b/YouTubeApiProject/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "YouTubeApiKey": "AIzaSyBao6-ABYCWF39ioufqu4YCHdhr0PUAFY0",
+    "YouTubeApiKey": "YOUR_YOUTUBE_API_KEY",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
